fix autoscaling to accept kubernetes client config
update proto to include multiple node groups
